Fix z-index property in '.custom-notice' style

--- a/src/main/webapp/static/css/duck.css
+++ b/src/main/webapp/static/css/duck.css
@@ -73,6 +73,7 @@
     bottom: 0.25rem;
     width: calc(100% - 1.5rem);
     transform: translateX(-50%);
+    z-index: 100;
 }
 .custom-notice .content {
     text-align: center;
@@ -85,6 +86,6 @@
         left: auto;
         width: 14rem;
         transform: none;
+        z-index: 100;
     }
 }
-/*notification*/
